// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Articles A11y I can see the skip to content link 1`] = `"مشاهده محتوا"`;

exports[`AMP Articles AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Articles AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
  },
}
`;

exports[`AMP Articles Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/persian"`;

exports[`AMP Articles Footer I can see the footer copyright and external linking text 1`] = `"© 2020 بی بی سی. بی بی سی مسئول محتوای سایت های دیگر نیست. سیاست ما درباره لینک دادن به سایت های دیگر."`;

exports[`AMP Articles Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, فارسی",
  "url": "/persian",
}
`;

exports[`AMP Articles Footer Link should match text and url 2`] = `
Object {
  "text": "چرا می‌توانید به بی‌بی‌سی اطمینان کنید؟",
  "url": "https://www.bbc.com/persian/institutional-49283091",
}
`;

exports[`AMP Articles Footer Link should match text and url 3`] = `
Object {
  "text": "شرایط استفاده",
  "url": "https://www.bbc.com/persian/institutional-37474133",
}
`;

exports[`AMP Articles Footer Link should match text and url 4`] = `
Object {
  "text": "درباره بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37474136",
}
`;

exports[`AMP Articles Footer Link should match text and url 5`] = `
Object {
  "text": "سیاست حفظ حریم خصوصی",
  "url": "https://www.bbc.com/persian/institutional-37540067",
}
`;

exports[`AMP Articles Footer Link should match text and url 6`] = `
Object {
  "text": "کوکی ها",
  "url": "https://www.bbc.co.uk/usingthebbc/cookies/",
}
`;

exports[`AMP Articles Footer Link should match text and url 7`] = `
Object {
  "text": "تماس با بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37542244",
}
`;

exports[`AMP Articles Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP Articles Footer Link should match text and url 9`] = `
Object {
  "text": "سیاست ما درباره لینک دادن به سایت های دیگر.",
  "url": "https://www.bbc.com/persian/institutional/2011/04/000001_links",
}
`;

exports[`AMP Articles Header I can see the branding 1`] = `"BBC News, فارسی"`;

exports[`AMP Articles Header Navigation link should match text and url 1`] = `
Object {
  "text": "صفحه اول",
  "url": "/persian",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 2`] = `
Object {
  "text": "کرونا",
  "url": "/persian/science-52004647",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 3`] = `
Object {
  "text": "پخش زنده",
  "url": "/persian/media-49522521",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 4`] = `
Object {
  "text": "ویدیو",
  "url": "/persian/media/video",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 5`] = `
Object {
  "text": "تلویزیون",
  "url": "/persian/tv-and-radio-37434377",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 6`] = `
Object {
  "text": "رادیو",
  "url": "/persian/tv-and-radio-37434376",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 7`] = `
Object {
  "text": "ايران",
  "url": "/persian/iran",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 8`] = `
Object {
  "text": "افغانستان",
  "url": "/persian/afghanistan",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 9`] = `
Object {
  "text": "جهان",
  "url": "/persian/world",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 10`] = `
Object {
  "text": "هنر",
  "url": "/persian/arts",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 11`] = `
Object {
  "text": "ورزش",
  "url": "/persian/sport",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 12`] = `
Object {
  "text": "اقتصاد",
  "url": "/persian/business",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 13`] = `
Object {
  "text": "دانش",
  "url": "/persian/science",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 14`] = `
Object {
  "text": "ناظران می‌گویند",
  "url": "/persian/blogs/viewpoints",
}
`;

exports[`AMP Articles I can see an image with a caption 1`] = `"https://ichef.bbci.co.uk/news/640/cpsprodpb/87F5/production/_103150843_mediaitem103146787.jpg"`;

exports[`AMP Articles I can see an image with a caption 2`] = `"توضیح تصویر، نوشیدنی‌ها داغ در بسته‌های سربسته توزیع می‌شوند"`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/persian/images/icons/icon-192x192.png",
}
`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-72x72.png",
}
`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-96x96.png",
}
`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-128x128.png",
}
`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-144x144.png",
}
`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-152x152.png",
}
`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-180x180.png",
}
`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-192x192.png",
}
`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-384x384.png",
}
`;

exports[`AMP Articles SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-512x512.png",
}
`;

exports[`AMP Articles SEO Canonical link 1`] = `"http://localhost:7080/persian/articles/c4vlle3q337o"`;

exports[`AMP Articles SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP Articles SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP Articles SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Articles SEO Heading level 1 1`] = `"پهپادی که برایتان قهوه می‌آورد"`;

exports[`AMP Articles SEO Lang attribute 1`] = `"fa"`;

exports[`AMP Articles SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "Article",
      "about": Array [
        Object {
          "@type": "Thing",
          "name": " پهپاد",
        },
      ],
      "author": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "noBylinesPolicy": "https://www.bbc.com/persian/institutional-49283091#authorexpertise",
      },
      "dateModified": "2018-08-24T14:57:42.000Z",
      "datePublished": "2018-08-24T14:57:42.000Z",
      "headline": "پهپادی که برایتان قهوه می‌آورد",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/persian/articles/c4vlle3q337o",
        "@type": "WebPage",
        "name": "پهپادی که برایتان قهوه می‌آورد",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "publishingPrinciples": "https://www.bbc.com/persian/institutional-49283091",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "url": "http://localhost:7080/persian/articles/c4vlle3q337o",
    },
  ],
}
`;

exports[`AMP Articles SEO OG description 1`] = `"پهپادی که برایتان قهوه می‌آورد"`;

exports[`AMP Articles SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`AMP Articles SEO OG image alt 1`] = `"BBC News فارسی"`;

exports[`AMP Articles SEO OG locale 1`] = `"fa"`;

exports[`AMP Articles SEO OG site name 1`] = `"BBC News فارسی"`;

exports[`AMP Articles SEO OG title 1`] = `"پهپادی که برایتان قهوه می‌آورد - BBC News فارسی"`;

exports[`AMP Articles SEO OG type 1`] = `"article"`;

exports[`AMP Articles SEO OG url 1`] = `"http://localhost:7080/persian/articles/c4vlle3q337o"`;

exports[`AMP Articles SEO Page title 1`] = `"پهپادی که برایتان قهوه می‌آورد - BBC News فارسی"`;

exports[`AMP Articles SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP Articles SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Articles SEO Twitter creator 1`] = `"@bbcpersian"`;

exports[`AMP Articles SEO Twitter description 1`] = `"پهپادی که برایتان قهوه می‌آورد"`;

exports[`AMP Articles SEO Twitter image alt 1`] = `"BBC News فارسی"`;

exports[`AMP Articles SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`AMP Articles SEO Twitter site 1`] = `"@bbcpersian"`;

exports[`AMP Articles SEO Twitter title 1`] = `"پهپادی که برایتان قهوه می‌آورد - BBC News فارسی"`;
